[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/post_results.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="post_result" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -153.0
margin_right = 138.5
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 270.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="result" type="Label" parent="PanelContainer/items"]
margin_right = 263.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "hakdog"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="PanelContainer/items"]
margin_top = 84.0
margin_right = 263.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "jumno"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="pearls" type="Label" parent="PanelContainer/items"]
margin_top = 168.0
margin_right = 263.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "kaya"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/items"]
margin_top = 252.0
margin_right = 263.0
margin_bottom = 292.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="retry" type="Button" parent="PanelContainer/items/HBoxContainer"]
margin_right = 172.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "button_reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="Button" parent="PanelContainer/items/HBoxContainer"]
margin_left = 176.0
margin_right = 263.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "button_quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "fade"
anims/RESET = SubResource( 1 )
anims/fade = SubResource( 2 )

[node name="cue" type="AudioStreamPlayer" parent="."]
bus = "environment"

[connection signal="visibility_changed" from="." to="." method="_on_post_result_visibility_changed"]
[connection signal="pressed" from="PanelContainer/items/HBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PanelContainer/items/HBoxContainer/done" to="." method="_on_done_pressed"]
